refactor(api): 重构参数和响应对象
- 新增 CodeNameVO 类作为通用的编码-名称传输对象
- 重命名 IdRequest 为 IdDTO，IdName 为 IdNameVO，IdsRequest 为 IdsDTO，ItemsResponse 为 ItemsVO，KeywordsRequest为 KeywordsDTO，PageRequest 为 PageDTO，PageResponse 为 PageVO
- 为所有重命名的类添加静态工厂方法 of
- 删除 PageUtils 类，相关功能已移至 PageDTO 和 PageVO
- 优化部分类的属性注解和顺序