@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022-2024 Catch(catchlife6@163.com).
+ * Copyright (c) 2022-2025 Catch(catchlife6@163.com).
  * Atom is licensed under Mulan PSL v2.
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
@@ -13,37 +13,40 @@
 package net.wenzuo.atom.api.param;
 
 import io.swagger.v3.oas.annotations.media.Schema;
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * @author Catch
  * @since 2024-01-18
  */
+@NoArgsConstructor
+@AllArgsConstructor
 @Data
-public class ItemsResponse<T> {
+public class ItemsVO<T> {
 
 	@Schema(description = "列表")
-	private List<T> items = new ArrayList<>();
+	private List<T> items= new ArrayList<>();
 
-	public static <T> ItemsResponse<T> of() {
-		return new ItemsResponse<>();
+	public static <T> ItemsVO<T> of() {
+		return new ItemsVO<>();
 	}
 
-	public static <T> ItemsResponse<T> of(List<T> items) {
-		ItemsResponse<T> response = new ItemsResponse<>();
-		response.setItems(items);
-		return response;
+	public static <T> ItemsVO<T> of(List<T> items) {
+		ItemsVO<T> vo = new ItemsVO<>();
+		vo.setItems(items);
+		return vo;
 	}
 
-	public static <T, R> ItemsResponse<T> of(List<R> items, Function<R, T> function) {
-		ItemsResponse<T> response = new ItemsResponse<>();
-		response.setItems(items.stream().map(function).collect(Collectors.toList()));
-		return response;
+	public static <T, R> ItemsVO<T> of(List<R> items, Function<R, T> function) {
+		ItemsVO<T> vo = new ItemsVO<>();
+		vo.setItems(items.stream().map(function).toList());
+		return vo;
 	}
 
 }
